--- a/DemoProject/MY-DEMO-BLOG/Views/Shared/_Layout.cshtml
+++ b/DemoProject/MY-DEMO-BLOG/Views/Shared/_Layout.cshtml
@@ -69,7 +69,7 @@
                         <h2>{PLACEHOLDER} squad</h2>
                         <hr />
                         <div>
-                            <p>Make your own memes and share with friends !</p>
+                            <p>Make your own memes and share with friends</p>
                         </div>
                         <hr />
 
