--- a/DemoProject/MY-DEMO-BLOG/Views/Shared/_Layout.cshtml
+++ b/DemoProject/MY-DEMO-BLOG/Views/Shared/_Layout.cshtml
@@ -28,14 +28,21 @@
                     <div class="container">
                         <a class="btn btn-navbar btn-navbar_" data-toggle="collapse" data-target=".nav-collapse_">Menu <span class="icon-bar"></span> </a>
                         <div class="nav-collapse nav-collapse_  collapse">
-                            <ul class="nav sf-menu" style="width: 1200px;">
+
+
+                            <ul class="nav sf-menu">
                                 @Html.ActionLink("Meme Generator", "Index", "Home", new {area = ""}, new {@class = "navbar-brand"})
-                                <li style="font-family: fantasy; font-size: 4.5em; color: white; padding-right: 200px; padding-top: 30px;">MEME GENERATOR</li>
+                                <li style="font-family: fantasy; font-size: 4.5em; color: white; right: 100px; padding-top: 30px;">MEME GENERATOR</li>
                                 <li style="font-family: fantasy; font-size: 3em;">@Html.ActionLink("Home", "Index", "Home")</li>
                                 <li style="font-family: fantasy; font-size: 3em">@Html.ActionLink("Posts", "Index", "Posts")</li>
                                 <li style="font-family: fantasy; font-size: 3em">@Html.ActionLink("New Post", "Create", "Posts")</li>
+
                             </ul>
                             @Html.Partial("_LoginPartial")
+
+
+
+
                         </div>
                         </div>
                 </div>
