--- a/DemoProject/MY-DEMO-BLOG/Views/Account/Register.cshtml
+++ b/DemoProject/MY-DEMO-BLOG/Views/Account/Register.cshtml
@@ -11,35 +11,42 @@
     <h4>Create a new account.</h4>
     <hr />
     @Html.ValidationSummary("", new { @class = "text-danger" })
-    <div class="form-group">
-        @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
+    <div class="form-group" style="margin-left: 300px;">
+        @Html.LabelFor(m => m.Email, new {@class = "col-md-2 control-label"})
         <div class="col-md-10">
-            @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+            @Html.TextBoxFor(m => m.Email, new {@class = "form-control"})
         </div>
     </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
+    <br/>
+    <div class="form-group"style="margin-left: 300px;">
+        @Html.LabelFor(m => m.Password, new {@class = "col-md-2 control-label"})
         <div class="col-md-10">
-            @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
+            @Html.PasswordFor(m => m.Password, new {@class = "form-control"})
         </div>
     </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.ConfirmPassword, new {@class = "col-md-2 control-label"})
+    <br />
+    <div class="form-group"style="margin-left: 300px;">
+        @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
-            @Html.PasswordFor(m => m.ConfirmPassword, new {@class = "form-control"})
+            @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
         </div>
     </div>
+    <br />
 
     @Html.ValidationSummary("", new { @class = "text-danger" })
-    <div class="form-group">
-        @Html.LabelFor(m => m.FullName, new { @class = "col-md-2 control-label" })
+    <div class="form-group"style="margin-left: 300px;">
+        @Html.LabelFor(m => m.FullName, new {@class = "col-md-2 control-label"})
         <div class="col-md-10">
-            @Html.TextBoxFor(m => m.FullName, new { @class = "form-control" })
+            @Html.TextBoxFor(m => m.FullName, new {@class = "form-control"})
         </div>
     </div>
-    <div class="form-group">
+    <br/>
+    <div class="form-group"style="margin-left: 460px;">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Register"/>
+            <input type="submit" class="btn btn-default" value="Register" style="width: 222px;
+    padding-left: 0px;
+    padding-top: 4px;
+" />
         </div>
     </div>
 }
