--- a/DemoProject/MY-DEMO-BLOG/Views/Shared/_LoginPartial.cshtml
+++ b/DemoProject/MY-DEMO-BLOG/Views/Shared/_LoginPartial.cshtml
@@ -5,12 +5,25 @@
     {
     @Html.AntiForgeryToken()
 
-    <ul class="nav navbar-nav navbar-right">
-        <li>
-            @Html.ActionLink("Hello " + User.Identity.GetUserName() + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })
-        </li>
-        <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
-    </ul>
+        <div class="container clearfix">
+            <div class="span12">
+                <div class="navbar navbar_">
+                    <div class="container">
+                        <a class="btn btn-navbar btn-navbar_" data-toggle="collapse" data-target=".nav-collapse_">Menu <span class="icon-bar"></span> </a>
+                        <div class="nav-collapse nav-collapse_  collapse">
+                            <ul class="nav sf-menu">
+                                @Html.ActionLink("Meme Generator", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                                <li  style="bottom: 85px;">
+                                    @Html.ActionLink("Hello, " + User.Identity.GetUserName() + " !", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })
+                                </li>
+                                <li style="bottom: 85px;"><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+  
     }
 }
 else
