--- a/DemoProject/MY-DEMO-BLOG/Content/style.css
+++ b/DemoProject/MY-DEMO-BLOG/Content/style.css
@@ -1,6 +1,16 @@
 ﻿@import url(http://fonts.googleapis.com/css?family=Dorsa);
 @charset "utf-8";
 /* CSS Document */
+
+.control-label {
+    margin-left: 100px;
+}
+.btn-reg {
+    margin-top: 15px;
+}
+.form-group {
+    margin-bottom: 10px;
+}
 a[href^="tel:"] {
   color: inherit;
   text-decoration: none;
