Added image upload functionality

--- a/HangoverPartII/HangoverPartII/Views/Cocktails/Create.cshtml
+++ b/HangoverPartII/HangoverPartII/Views/Cocktails/Create.cshtml
@@ -7,10 +7,23 @@
 <h2>Create</h2>
 
 
+@using (Html.BeginForm("Index", "Cocktails", FormMethod.Post, new { enctype = "multipart/form-data" }))
+{
+    <label for="file">Upload Image:</label>
+    <input type="file" onchange="previewFile()" name="file" id="file" /><br><br>
+    <input type="submit" value="Save Cocktail" />
+        <br><br>
+        @ViewBag.Message
+}
+
+
+
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
-    
+
+
+    <img id="cocktailPicture" src="" />
     <div class="form-horizontal">
         <h4>Cocktail</h4>
         <hr />
@@ -55,6 +68,27 @@
         </div>
     </div>
 }
+
+
+<script>
+    function previewFile() {
+        var preview = document.querySelector('img'); //selects the query named img
+        var file = document.querySelector('input[type=file]').files[0]; //sames as here
+        var reader = new FileReader();
+
+        reader.onloadend = function () {
+            preview.src = reader.result;
+        }
+
+        if (file) {
+            reader.readAsDataURL(file); //reads the data as a URL
+        } else {
+            preview.src = "";
+        }
+    }
+
+    previewFile();
+</script>
 
 <div>
     @Html.ActionLink("Back to List", "Index")
