--- a/HangoverPartII/HangoverPartII/Content/Site.css
+++ b/HangoverPartII/HangoverPartII/Content/Site.css
@@ -22,3 +22,21 @@ select,
 textarea {
     max-width: 280px;
 }
+
+.cocktail-body {
+  overflow: auto;
+  width: auto;
+  height: 50px;
+}
+
+/*.content-field {
+    resize: none;
+    border: 3px solid #f2f2f2;
+    outline: none;
+    width: 550px;
+    height: 300px;
+    border-radius: 15px;
+    text-align: left;
+    font: 12px Lato-Light;
+    padding: 10px;
+}*/
