--- a/HangoverPartII/HangoverPartII/Views/Cocktails/Index.cshtml
+++ b/HangoverPartII/HangoverPartII/Views/Cocktails/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<HangoverPartII.Models.Cocktail>
+﻿
+@model IEnumerable<HangoverPartII.Models.Cocktail>
 
 @{
     ViewBag.Title = "Index";
@@ -9,24 +10,15 @@
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Date)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Image)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Title)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Body)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.NetLikeCount)
-        </th>
-        <th></th>
-    </tr>
+<hr />
 
-</table>
+@foreach (var cocktail in Model)
+{
+    <div class="col-md-3">
+        <b>@Html.DisplayFor(modelItem => cocktail.Title)</b>
+        <a href="@Url.Action("Details", "Cocktails", new { id = cocktail.Id })" class="col-md-3">
+            <img src="@Url.Content(String.Format("~/Images/{0}", cocktail.Image))"
+                 width="200" height="200" />
+        </a>
+    </div>
+}
