--- a/HangoverPartII/HangoverPartII/Views/Cocktails/Index.cshtml
+++ b/HangoverPartII/HangoverPartII/Views/Cocktails/Index.cshtml
@@ -16,11 +16,14 @@
 {
     <div class="col-md-3">
         <b>@Html.DisplayFor(modelItem => cocktail.Title)</b>
+        
+        <p style="font-weight: bold"> @Html.DisplayFor(modelItem => cocktail.NetLikeCount) Likes</p>
+        <p> @Html.ActionLink("Like", "Like", new { id = cocktail.Id })</p>
         <a href="@Url.Action("Details", "Cocktails", new { id = cocktail.Id })" class="col-md-3">
-            <img src="@Url.Content(String.Format("~/Images/{0}", cocktail.Image))"
+            <img style="border-radius: 65pt" src="@Url.Content(String.Format("~/Images/{0}", cocktail.Image))"
                  width="200" height="200" />
         </a>
-        @Html.DisplayFor(modelItem => cocktail.NetLikeCount) Likes <br/>
-        @Html.ActionLink("Like","Like", new { id = cocktail.Id})
     </div>
+
+
 }
