--- a/HangoverPartII/HangoverPartII/Content/Site.css
+++ b/HangoverPartII/HangoverPartII/Content/Site.css
@@ -29,6 +29,68 @@ textarea {
   height: 50px;
 }
 
+.img-containter {
+    float: left;
+    margin-right: 25px;
+}
+
+.form-horizontal {
+    float: left;
+}
+.footer {
+    position:fixed;
+    bottom:0;
+}
+.bash {
+    width:100%;
+}
+#primaryButton {
+    display: none; 
+}
+#file {
+    width: 300px;
+     height: 300px;
+}
+.cocktail-details {
+    display:inline-block;
+    width: 40%;
+    padding-top: 50px;
+    vertical-align: top;
+}
+.cocktail-picture {
+    display: inline-block;
+    vertical-align: top;
+}
+.previousButton {
+    margin-top: 210px;
+    border-color: #3276B1;
+}
+.actionButton {
+    margin-top: 210px;
+    border-color: #3276B1;
+}
+.previousButtonDesign {
+    padding: 15px !important;
+    border-color: #3276B1 !important;
+}
+.NextButtonDesign {
+    padding: 15px !important;
+    border-color: #3276B1 !important;
+}
+.edit-button {
+    color:white;
+    border-radius: 10px;
+    padding: 5px;
+    background-color: deepskyblue;
+    display: inline-block;
+}
+.delete-button {
+    border-radius: 10px;
+    padding: 5px;
+    background-color: deepskyblue;
+    display: inline-block;
+}
+
 /*.content-field {
     resize: none;
     border: 3px solid #f2f2f2;
