--- a/HangoverPartII/HangoverPartII/Views/Cocktails/Create.cshtml
+++ b/HangoverPartII/HangoverPartII/Views/Cocktails/Create.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Create</h2>
+<h2 w>Create cocktail</h2>
 
 @*@using (Html.BeginForm("UploadImage", "Cocktails", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
@@ -15,48 +15,50 @@
 {
     @Html.AntiForgeryToken()
 
-    <div class="wrapper">
-        <img class="img-responsive" id="file" src="" style="width: 300px; height: 300px">
-        <input type="submit" style="display: none" id="primaryButton" value="Save Cocktail"/>
-    </div>
+    <div class="bash">
+        <div class="img-containter">
+            <img class="img-responsive" id="file" src="">
+            <input type="submit" id="primaryButton" value="Save Cocktail" />
+        </div>
 
-    <div class="form-horizontal">
-        <h4>Cocktail</h4>
-        <hr />
-        
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        <div class="form-horizontal">
+            <h4>Cocktail</h4>
+            <hr />
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Image, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Image, new { htmlAttributes = new { @type = "file",
-               @onchange = "previewFile()" } })
-                @Html.ValidationMessageFor(model => model.Image, "", new { @class = "text-danger" })
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
+            <div class="form-group">
+                @Html.LabelFor(model => model.Image, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.Image, new { htmlAttributes = new { @type = "file", @onchange = "previewFile()" } })
+                    @Html.ValidationMessageFor(model => model.Image, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="form-group">
+                @Html.LabelFor(model => model.Title, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.Title, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Title, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="form-group">
+                @Html.LabelFor(model => model.Body, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.TextAreaFor(model => model.Body, new { htmlAttributes = new { @class = "form-control", @rows = 30, @cols = 30 } })                   
+                    @Html.ValidationMessageFor(model => model.Body, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="form-group">
+                <div class="col-md-offset-2 col-md-10">
+                    <input type="submit" value="Create" class="btn btn-primary" onclick="document.getElementById('primaryButton').click()" />
+                </div>
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Title, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Title, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Title, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Body, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.TextAreaFor(model => model.Body, new { htmlAttributes = new { @class= "form-control" } })
-                @*<textarea class="content-field" type="text" value="" placeholder="Text" id="content"></textarea>*@
-                @Html.ValidationMessageFor(model => model.Body, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" onclick="document.getElementById('primaryButton').click()" />
-            </div>
-        </div>
+        <img style="width: 350px; margin-left: 100px;" src="~/Content/back.jpg" />
     </div>
 }
     
@@ -80,9 +82,6 @@
   previewFile();  //calls the function named previewFile()
 </script>
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
