--- a/HangoverPartII/HangoverPartII/Views/Account/Register.cshtml
+++ b/HangoverPartII/HangoverPartII/Views/Account/Register.cshtml
@@ -6,8 +6,7 @@
 @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
 
-
-    <div style="background: black; border-radius: 30pt; color: whitesmoke; padding: 30pt;">
+    <div style="background: black; border-radius: 30pt; color: whitesmoke; margin-left: 45pt; padding: 25pt;">
         @Html.AntiForgeryToken()
         <h3 style="margin-left: 110pt;">Sign up</h3>
         <hr />
