--- a/HangoverPartII/HangoverPartII/Views/Cocktails/Create.cshtml
+++ b/HangoverPartII/HangoverPartII/Views/Cocktails/Create.cshtml
@@ -8,10 +8,6 @@
     <p style="color: whitesmoke;text-decoration:none" href="/Cocktails/Create">Create your own cocktail</p>
 </div>
 <hr />
-@*@using (Html.BeginForm("UploadImage", "Cocktails", FormMethod.Post, new { enctype = "multipart/form-data" }))
-    {
-
-    }*@
 
 @using (Html.BeginForm("Create", "Cocktails", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
@@ -55,15 +51,11 @@
 
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Create" class="btn btn-primary" onclick="document.getElementById('primaryButton').click()" />
+                        <input type="submit" value="Create" class="btn btn-primary" />
                     </div>
                 </div>
             </div>
-
         </div>
-
-
-
     </div>
 }
 
