--- a/HangoverPartII/HangoverPartII/Views/Shared/_Layout.cshtml
+++ b/HangoverPartII/HangoverPartII/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            @Html.ActionLink("Application name", "Index", "Home", new {area = ""}, new {@class = "navbar-brand"})
+            @Html.ActionLink("Hangover", "Index", "Home", new {area = ""}, new {@class = "navbar-brand"})
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
@@ -31,7 +31,7 @@
 </div>
 <div class="container body-content" >
     @RenderBody()
-    <body background="~/Images/background.jpg">
+    @*<body background="~/Images/background.jpg">*@
 
 
 </div>
