Added Edit and Delete to comments

--- a/HangoverPartII/HangoverPartII/Views/Cocktails/Details.cshtml
+++ b/HangoverPartII/HangoverPartII/Views/Cocktails/Details.cshtml
@@ -21,11 +21,11 @@
     <div class="cocktail-picture">
         <img src="@Url.Content(String.Format("~/Images/{0}", Model.Cocktail.Image))" width="300" height="300" />
     </div>
-    
+
 
     <div class="cocktail-details">
         <div>
-            <strong>Author: </strong>@Html.DisplayFor(model => model.Cocktail.Author.UserName) @*Doesn't work*@
+            <strong>Author: </strong>@Html.DisplayFor(model => model.Cocktail.Author.UserName)
         </div>
         <br />
         <div>
@@ -39,7 +39,7 @@
         <div class="button-group">
             @Html.ActionLink("Edit", "Edit", new { id = Model.Cocktail.Id }, new { @class = "btn btn-primary" })
             @Html.ActionLink("Delete", "Delete", new { id = Model.Cocktail.Id }, new { @class = "btn btn-primary" })
-        </div>                
+        </div>
     </div>
 </div>
 
@@ -55,37 +55,43 @@
     }
 </div>
 <br/>
+
 <div class="form-group">
     <div class="col-md-offset-2 col-md-10">
-        <table class="table table-striped table-hover ">
-            <tbody>
-                @foreach (var comment in Model.Comments)
-                {
-                    <tr><td><i>@comment.Body</i></td></tr>
-                }
-            </tbody>
-        </table>
+
+        @foreach (var comment in Model.Comments)
+        {
+            <div class="well well-sm col-md-6">
+                <b>@comment.Body</b>
+                <p>
+                    <small><i>@comment.UserName</i></small>
+                    <small><i>@comment.Date</i></small>
+                </p>
+                @Html.ActionLink("Edit", "Edit", new { id = comment.Id, controller="Comments" }) |
+                @Html.ActionLink("Delete", "Delete", new { id = comment.Id, controller="Comments" })
+            </div>
+        }
     </div>
 </div>
 
 <div class="form-group">
     <div class="col-md-offset-2 col-md-10">
 
-        @Html.Action("Create", "Comments")                    
+        @Html.Action("Create", "Comments")
 
     </div>
 </div>
 
 <script>
-function show(toBlock) {
-                setDisplay(toBlock, 'block');
-            }
-            function hide(toNone) {
-                setDisplay(toNone, 'none');
-            }
-            function setDisplay(target, str) {
-                document.getElementById(target).style.display = str;
-            }
+    function show(toBlock) {
+        setDisplay(toBlock, 'block');
+    }
+    function hide(toNone) {
+        setDisplay(toNone, 'none');
+    }
+    function setDisplay(target, str) {
+        document.getElementById(target).style.display = str;
+    }
 </script>
 
 
