--- a/HangoverPartII/HangoverPartII/Views/Comments/Create.cshtml
+++ b/HangoverPartII/HangoverPartII/Views/Comments/Create.cshtml
@@ -7,19 +7,28 @@
 @using (Html.BeginForm("Create", "Comments", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <div class="form-group">
-            @Html.LabelFor(model => model.Body, htmlAttributes: new { @class = "control-label col-md-2" })
+            @if (Request.IsAuthenticated)
+            {
+                @Html.LabelFor(model => model.Body, htmlAttributes: new { @class = "control-label col-md-2" })
+            }
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Body, new { htmlAttributes = new { @class = "form-control" } })
+                @if (Request.IsAuthenticated)
+                {
+                    @Html.EditorFor(model => model.Body, new { htmlAttributes = new { @class = "form-control" } })
+                }
                 @Html.ValidationMessageFor(model => model.Body, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Add Comment" class="btn btn-default" />
+                @if (Request.IsAuthenticated)
+                {
+                    <input type="submit" value="Add Comment" class="btn btn-default" />
+                }
             </div>
         </div>
     </div>
